--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>One To Many</title>
-  </head>
+</head>
 
 <body>
-  <h1>One To Many: Prototype I</h1>
+  <center><a href="/"><h1>One To Many</h1></a></center>
   <%= yield.code_indent(2) %>
 </body>
 </html>
