--- a/views/index.erb
+++ b/views/index.erb
@@ -1,17 +1,25 @@
-<p>Welcome!</p>
+<div style="width: 100%; height: 200px; padding: 20px; background: #7256A1; margin-left: -32px;">
+  <div style="width: 600px; height: 30px; margin: 0px auto;">
+    <input type="text" style="padding: 10px; font-size: 20px; width: 100%; height: 100%;" placeholder="I'm looking for...">
+  </div>
+
+  <center><p style="color: #FFF; margin-top: 50px;">- OR -</p></center>
+  <center><p style="color: #FFF;">Find products by category:</p></center>
+  <center><button>...</button> <button>Category A</button> <button>Category B</button> <button>Category C</button> <button>...</button></center>
+</div>
 
 <% if @latest_requests %>
 <h3>Latest Requests:</h3>
 <% @latest_requests.each do |request| %>
 <div style="float: left; width: 200px; margin-right: 50px;">
   <div style="width: 100%; height: 200px; margin-bottom: 30px;"><img src="http://placehold.it/200x200" alt="Placeholder image"></div>
-  <h5><%= request.title %></h5>
+  <a href="/requests/<%= request.id %>"><h5><%= request.title %></h5></a>
   <p><b>Price:</b> <span style="color: #CCC;">No bids yet</span></p>
-  <p><%= request.num_backers %> Backers | <a href="/join/<%= request.id %>?phase=alpha">I'm In!</a></p>
+  <p><%= request.num_backers %> Seeds | <a href="/join/<%= request.id %>?phase=alpha">I'm In!</a></p>
 </div>
 <% end %>
 <div style="clear: both; margin-top: 30px;"></div>
-<a href="/requests">View All Requests</a>
+<a href="/requests"><button>View All Requests</button></a> <a href="/requests/new"><button>Add New Request</button></a>
 <div style="margin-bottom: 100px;"></div>
 <% end %>
 
@@ -22,7 +30,7 @@
   <div style="width: 100%; height: 200px; margin-bottom: 30px;"><img src="http://placehold.it/200x200" alt="Placeholder image"></div>
   <h5><%= item.title %></h5>
   <p><b>Price:</b> $<%= item.price %></p>
-  <p><%= item.num_backers %> Backers | <a href="/join/<%= item.id %>?phase=beta">I'm In!</a></p>
+  <p><%= item.num_backers %> Seeds | <a href="/join/<%= item.id %>?phase=beta">I'm In!</a></p>
   <p><em>4 days remaining.</em></p>
 </div>
 <% if index == 2 or index == 5 or index == 7 or @items.count < 3 %><div style="clear: both; margin-botom: 20px;"></div><% end %>
