--- a/views/requests.erb
+++ b/views/requests.erb
@@ -4,9 +4,9 @@
 <% @requests.each_with_index do |request, index| %>
 <div style="float: left; width: 200px; margin-right: 50px;">
   <div style="width: 100%; height: 200px; margin-bottom: 30px;"><img src="http://placehold.it/200x200" alt="Placeholder image"></div>
-  <h5><%= request.title %></h5>
+  <a href="/requests/<%= request.id %>"><h5><%= request.title %></h5></a>
   <p><b>Price:</b> <span style="color: #CCC;">No bids yet</span></p>
-  <p><%= request.num_backers %> Backers | <a href="/join/<%= request.id %>?phase=alpha">I'm In!</a></p>
+  <p><%= request.num_backers %> Seeds | <a href="/join/<%= request.id %>?phase=alpha">I'm In!</a></p>
 </div>
 <% if index != 0 && index % 3 == 0 %><div style="clear: both; margin-botom: 20px;"></div><% end %>
 <% end %>
